--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,7 @@
-##################################
-#                                #
-# Feel free to edit this file :) #
-#                                #
-##################################
-
 logo: /images/isomer-logo.svg
-
 links:
+  - title: About Us
+    collection: about-us
   - title: Contact Us
     url: /contact-us/
   - title: Example Page
