--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,3 +4,6 @@ links:
     collection: about-us
   - title: Contact Us
     url: /contact-us/
+  - title: About Us
+    url: /our-founder
+    sublinks: []
