--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@ links:
       - title: Our Founder
         url: /about-us/our-founder/
       - title: The Christian Brothers
-        url: /permalink
+        url: /about-us/the-christian-brothers/
       - title: Our History
-        url: /permalink
+        url: /about-us/our-history/
   - title: Contact Us
     url: /contact-us/
