--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,5 +9,7 @@ links:
         url: /about-us/the-christian-brothers/
       - title: Our History
         url: /about-us/our-history/
+      - title: Our Crest & Our Motto
+        url: /about-us/crest-motto
   - title: Contact Us
     url: /contact-us/
