--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,5 +11,7 @@ links:
         url: /about-us/our-history/
       - title: Our Crest & Our Motto
         url: /about-us/crest-motto
+      - title: Our Mission & Vision & Values
+        url: /about-us/mission-vision-values
   - title: Contact Us
     url: /contact-us/
