--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,5 +13,7 @@ links:
         url: /about-us/crest-motto
       - title: Our Mission & Vision & Values
         url: /about-us/mission-vision-values
+      - title: Our School Rally & Songs
+        url: /about-us/rally-songs/
   - title: Contact Us
     url: /contact-us/
