--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-us:
     output: true
     order:
+      - Our Staff/Our Staff.md
       - Our Staff/.keep
       - Our Founder.md
       - The Christian Brothers.md
