--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,5 +15,7 @@ links:
         url: /about-us/mission-vision-values
       - title: Our School Rally & Songs
         url: /about-us/rally-songs/
+      - title: Our Staff
+        url: /about-us/staff/
   - title: Contact Us
     url: /contact-us/
