--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,5 +17,13 @@ links:
         url: /about-us/rally-songs/
       - title: Our Staff
         url: /about-us/staff/
+      - title: School Calendar
+        url: /about-us/calendar/
+      - title: School Council
+        url: /about-us/sch-council/
+      - title: Our Former School Principals
+        url: /about-us/former-sch-principals/
+      - title: Alumni
+        url: /about-us/alumni/
   - title: Contact Us
     url: /contact-us/
