--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-us:
     output: true
     order:
+      - Our School Rules.md
       - Our Founder.md
       - The Christian Brothers.md
       - Our History.md
