--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -25,5 +25,7 @@ links:
         url: /about-us/former-sch-principals/
       - title: Alumni
         url: /about-us/alumni/
+      - title: Our School Rules
+        url: /about-us/sch-rules/
   - title: Contact Us
     url: /contact-us/
