--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -27,5 +27,7 @@ links:
         url: /about-us/alumni/
       - title: Our School Rules
         url: /about-us/sch-rules/
+      - title: School Information
+        url: /about-us/sch-info/
   - title: Contact Us
     url: /contact-us/
