--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -29,5 +29,7 @@ links:
         url: /about-us/sch-rules/
       - title: School Information
         url: /about-us/sch-info/
+      - title: School NON-Financial Info
+        url: https://delasalle-moe-edu-sg-admin.cwp.sg/qql/slot/u749/2021/Non%20Financial%20Info%20-%202021.pdf
   - title: Contact Us
     url: /contact-us/
