--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -33,3 +33,6 @@ links:
         url: https://delasalle-moe-edu-sg-admin.cwp.sg/qql/slot/u749/2021/Non%20Financial%20Info%20-%202021.pdf
   - title: Contact Us
     url: /contact-us/
+  - title: Our Programmes
+    url: /permalink
+    sublinks: []
