--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -32,7 +32,11 @@ links:
       - title: School NON-Financial Info
         url: https://delasalle-moe-edu-sg-admin.cwp.sg/qql/slot/u749/2021/Non%20Financial%20Info%20-%202021.pdf
   - title: Our Programmes
-    url: /permalink
-    sublinks: []
+    url: /our-programmes/llp/
+    sublinks:
+      - title: Learning for Life Prog (LLP)
+        url: /our-programmes/llp/
+      - title: Learning for Life Prog (ALP)
+        url: /permalink
   - title: Contact Us
     url: /contact-us/
