--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -36,7 +36,7 @@ links:
     sublinks:
       - title: Learning for Life Prog (LLP)
         url: /our-programmes/llp/
-      - title: Learning for Life Prog (ALP)
-        url: /permalink
+      - title: Applied Learning Prog (ALP)
+        url: /our-programmes/llp/
   - title: Contact Us
     url: /contact-us/
