--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -39,7 +39,7 @@ links:
       - title: Applied Learning Prog (ALP)
         url: /our-programmes/llp/
   - title: Events
-    url: /permalink
+    url: /events/gallery2022/
     sublinks: []
   - title: Contact Us
     url: /contact-us/
