--- a/_events/collection.yml
+++ b/_events/collection.yml
@@ -2,6 +2,7 @@ collections:
   events:
     output: true
     order:
+      - Achievements/2020.md
       - Achievements/2021.md
       - Achievements/.keep
       - Gallery/.keep
