--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -40,6 +40,8 @@ links:
         url: /our-programmes/llp/
   - title: Events
     url: /events/gallery2022/
-    sublinks: []
+    sublinks:
+      - title: Achievements
+        url: /events/Achievements/2021/
   - title: Contact Us
     url: /contact-us/
