--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -39,7 +39,7 @@ links:
       - title: Applied Learning Prog (ALP)
         url: /our-programmes/llp/
   - title: Events
-    url: /events/gallery2022/
+    url: /events/2022/
     sublinks:
       - title: Achievements
         url: /events/Achievements/2021/
