--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -41,6 +41,8 @@ links:
   - title: Events
     url: /events/Gallery/gallery2022/
     sublinks:
+      - title: Events
+        url: /events/Gallery/gallery2022/
       - title: Achievements
         url: /events/Achievements/2021/
   - title: Contact Us
