--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -50,5 +50,7 @@ links:
     sublinks:
       - title: English Language
         url: /curriculum/english-lan/
+      - title: Mathematics
+        url: /curriculum/math/
   - title: Contact Us
     url: /contact-us/
