--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -52,5 +52,9 @@ links:
         url: /curriculum/english-lan/
       - title: Mathematics
         url: /curriculum/math/
+      - title: Science
+        url: /curriculum/science/
+      - title: Mother Tongue Language
+        url: /permalink
   - title: Contact Us
     url: /contact-us/
