--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -55,6 +55,8 @@ links:
       - title: Science
         url: /curriculum/science/
       - title: Mother Tongue Language
+        url: /curriculum/mt-lan/
+      - title: Physical and Health Education
         url: /permalink
   - title: Contact Us
     url: /contact-us/
