--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -57,6 +57,8 @@ links:
       - title: Mother Tongue Language
         url: /curriculum/mt-lan/
       - title: Physical and Health Education
+        url: /curriculum/pe/
+      - title: Aesthetics
         url: /permalink
   - title: Contact Us
     url: /contact-us/
