--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -59,6 +59,6 @@ links:
       - title: Physical and Health Education
         url: /curriculum/pe/
       - title: Aesthetics
-        url: /permalink
+        url: /curriculum/aesthetics/
   - title: Contact Us
     url: /contact-us/
