--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -60,5 +60,7 @@ links:
         url: /curriculum/pe/
       - title: Aesthetics
         url: /curriculum/aesthetics/
+      - title: Character & Citizenship Edu
+        url: /permalink
   - title: Contact Us
     url: /contact-us/
