--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -61,6 +61,8 @@ links:
       - title: Aesthetics
         url: /curriculum/aesthetics/
       - title: Character & Citizenship Edu
+        url: /curriculum/cceducation/
+      - title: Social Studies
         url: /permalink
   - title: Contact Us
     url: /contact-us/
