--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -63,6 +63,8 @@ links:
       - title: Character & Citizenship Edu
         url: /curriculum/cceducation/
       - title: Social Studies
+        url: /curriculum/ss/
+      - title: Sexuality Education
         url: /permalink
   - title: Contact Us
     url: /contact-us/
