--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -65,6 +65,6 @@ links:
       - title: Social Studies
         url: /curriculum/ss/
       - title: Sexuality Education
-        url: /permalink
+        url: /curriculum/sex-ed/
   - title: Contact Us
     url: /contact-us/
