--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -68,3 +68,6 @@ links:
         url: /curriculum/sex-ed/
   - title: Contact Us
     url: /contact-us/
+  - title: Co-Curricular Activities (CCA)
+    url: /permalink
+    sublinks: []
