--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -67,9 +67,9 @@ links:
       - title: Sexuality Education
         url: /curriculum/sex-ed/
   - title: Co-Curricular Activities (CCA)
-    url: /permalink
+    url: /cca/sport-games/
     sublinks:
       - title: Sports & Games
-        url: /permalink
+        url: /cca/sport-games/
   - title: Contact Us
     url: /contact-us/
