--- a/_cca/collection.yml
+++ b/_cca/collection.yml
@@ -2,5 +2,6 @@ collections:
   cca:
     output: true
     order:
+      - Sports & Games/Basketball.md
       - Sports & Games/Hockey.md
       - Sports & Games/.keep
