--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -70,6 +70,6 @@ links:
     url: /cca/sport-games/
     sublinks:
       - title: Sports & Games
-        url: /cca/sport-games/
+        url: /cca/sport-games/hockey/
   - title: Contact Us
     url: /contact-us/
