--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -67,7 +67,7 @@ links:
       - title: Sexuality Education
         url: /curriculum/sex-ed/
   - title: Co-Curricular Activities (CCA)
-    url: /cca/sport-games/
+    url: /cca/sport-games/hockey/
     sublinks:
       - title: Sports & Games
         url: /cca/sport-games/hockey/
