--- a/_cca/collection.yml
+++ b/_cca/collection.yml
@@ -2,6 +2,7 @@ collections:
   cca:
     output: true
     order:
+      - Performing Arts/Cutural Dance.md
       - Performing Arts/.keep
       - Sports & Games/.keep
       - Sports & Games/Hockey.md
