--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -71,5 +71,7 @@ links:
     sublinks:
       - title: Sports & Games
         url: /cca/sport-games/hockey/
+      - title: Performing Arts
+        url: /cca/Performing-Arts/cul-dance/
   - title: Contact Us
     url: /contact-us/
