--- a/_cca/collection.yml
+++ b/_cca/collection.yml
@@ -8,5 +8,6 @@ collections:
       - Sports & Games/Rugby.md
       - Sports & Games/Netball.md
       - Sports & Games/Wushu.md
+      - Performing Arts/Modern Dance.md
       - Performing Arts/.keep
       - Performing Arts/Cutural Dance.md
