--- a/_cca/collection.yml
+++ b/_cca/collection.yml
@@ -8,6 +8,7 @@ collections:
       - Sports & Games/Rugby.md
       - Sports & Games/Netball.md
       - Sports & Games/Wushu.md
+      - Performing Arts/Choir.md
       - Performing Arts/.keep
       - Performing Arts/Cutural Dance.md
       - Performing Arts/Modern Dance.md
