--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -73,5 +73,7 @@ links:
         url: /cca/sport-games/hockey/
       - title: Performing Arts
         url: /cca/Performing-Arts/cul-dance/
+      - title: Clubs
+        url: /permalink
   - title: Contact Us
     url: /contact-us/
