--- a/_cca/collection.yml
+++ b/_cca/collection.yml
@@ -2,6 +2,7 @@ collections:
   cca:
     output: true
     order:
+      - Clubs/Chess Club.md
       - Clubs/Talking Titans.md
       - Clubs/.keep
       - Sports & Games/.keep
