--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -74,6 +74,8 @@ links:
       - title: Performing Arts
         url: /cca/Performing-Arts/cul-dance/
       - title: Clubs
+        url: /cca/Clubs/talking-titans/
+      - title: Uniformed Groups
         url: /permalink
   - title: Contact Us
     url: /contact-us/
