--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -76,6 +76,8 @@ links:
       - title: Clubs
         url: /cca/Clubs/talking-titans/
       - title: Uniformed Groups
+        url: /cca/Uniformed-Groups/brownies/
+      - title: CCA Teachers-In-Charge
         url: /permalink
   - title: Contact Us
     url: /contact-us/
