--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -78,6 +78,6 @@ links:
       - title: Uniformed Groups
         url: /cca/Uniformed-Groups/brownies/
       - title: CCA Teachers-In-Charge
-        url: /permalink
+        url: /cca/cca-tic/
   - title: Contact Us
     url: /contact-us/
