--- a/_cca/collection.yml
+++ b/_cca/collection.yml
@@ -2,6 +2,7 @@ collections:
   cca:
     output: true
     order:
+      - CCA Schedule for 2022.md
       - Sports & Games/.keep
       - Sports & Games/Hockey.md
       - Sports & Games/Basketball.md
