--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -81,5 +81,8 @@ links:
         url: /cca/cca-tic/
       - title: CCA Schedule for 2022
         url: /cca/cca-schedule-2022/
+  - title: For Parents
+    url: /permalink
+    sublinks: []
   - title: Contact Us
     url: /contact-us/
