--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -87,6 +87,8 @@ links:
       - title: Parent Support Group
         url: /for-parents/parent-support-group/
       - title: Parent Notifications
+        url: /for-parents/parent-noti/
+      - title: Parent Links
         url: /permalink
   - title: Contact Us
     url: /contact-us/
