--- a/_for-parents/collection.yml
+++ b/_for-parents/collection.yml
@@ -2,5 +2,6 @@ collections:
   for-parents:
     output: true
     order:
+      - Parent Links.md
       - Parent Support Group.md
       - Parent Notifications.md
