--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -89,6 +89,8 @@ links:
       - title: Parent Notifications
         url: /for-parents/parent-noti/
       - title: Parent Links
+        url: /for-parents/parent-links/
+      - title: Home Based Learning
         url: /permalink
   - title: Contact Us
     url: /contact-us/
