--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -91,6 +91,8 @@ links:
       - title: Parent Links
         url: /for-parents/parent-links/
       - title: Home Based Learning
+        url: /for-parents/hbl/
+      - title: Parents Gateway
         url: /permalink
   - title: Contact Us
     url: /contact-us/
