--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -93,6 +93,10 @@ links:
       - title: Home Based Learning
         url: /for-parents/hbl/
       - title: Parents Gateway
+        url: /for-parents/parent-gateway/
+      - title: Google Classroom
+        url: https://sites.google.com/moe.edu.sg/dlssgc/home
+      - title: Primary 1 2023
         url: /permalink
   - title: Contact Us
     url: /contact-us/
