--- a/_for-parents/collection.yml
+++ b/_for-parents/collection.yml
@@ -2,6 +2,7 @@ collections:
   for-parents:
     output: true
     order:
+      - Primary 1 2023.md
       - Parent Support Group.md
       - Parent Notifications.md
       - Parent Links.md
