--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -97,6 +97,8 @@ links:
       - title: Google Classroom
         url: https://sites.google.com/moe.edu.sg/dlssgc/home
       - title: Primary 1 2023
+        url: /for-parents/p1/
+      - title: Book List 2022
         url: /permalink
   - title: Contact Us
     url: /contact-us/
