--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -99,6 +99,8 @@ links:
       - title: Primary 1 2023
         url: /for-parents/p1/
       - title: Book List 2022
+        url: /for-parents/booklist2022/
+      - title: Admin Forms
         url: /permalink
   - title: Contact Us
     url: /contact-us/
