--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -101,6 +101,8 @@ links:
       - title: Book List 2022
         url: /for-parents/booklist2022/
       - title: Admin Forms
+        url: /for-parents/admin-form/
+      - title: Grp Personal Accident Insuranc
         url: /permalink
   - title: Contact Us
     url: /contact-us/
