--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -103,6 +103,11 @@ links:
       - title: Admin Forms
         url: /for-parents/admin-form/
       - title: Grp Personal Accident Insuranc
-        url: /permalink
+        url: /for-parents/grp-personal-accident-insur/
   - title: Contact Us
     url: /contact-us/
+  - title: For Lasallians
+    url: /permalink
+    sublinks:
+      - title: Student Links
+        url: /permalink
