--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -107,7 +107,7 @@ links:
   - title: Contact Us
     url: /contact-us/
   - title: For Lasallians
-    url: /permalink
+    url: /for-lasallians/student-links/
     sublinks:
       - title: Student Links
-        url: /permalink
+        url: /for-lasallians/student-links/
