--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -37,7 +37,7 @@ links:
       - title: Learning for Life Prog (LLP)
         url: /our-programmes/llp/
       - title: Applied Learning Prog (ALP)
-        url: /our-programmes/llp/
+        url: /our-programmes/alp/
   - title: Events
     url: /events/Gallery/gallery2022/
     sublinks:
