--- a/_for-parents/collection.yml
+++ b/_for-parents/collection.yml
@@ -8,6 +8,6 @@ collections:
       - Home Based Learning.md
       - Parents Gateway.md
       - Primary 1 2023.md
-      - Book List 2022.md
+      - Booklist & Uniform.md
       - Admin Forms.md
       - Group Personal Accident Insurance.md
