--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -98,8 +98,8 @@ links:
         url: https://sites.google.com/moe.edu.sg/dlssgc/home
       - title: Primary 1 2023
         url: /for-parents/p1/
-      - title: Book List 2022
-        url: /for-parents/booklist2022/
+      - title: Booklist & Uniform
+        url: /for-parents/booklistnuniform
       - title: Admin Forms
         url: /for-parents/admin-form/
       - title: Grp Personal Accident Insuranc
