--- a/_anniversary/collection.yml
+++ b/_anniversary/collection.yml
@@ -2,6 +2,7 @@ collections:
   anniversary:
     output: true
     order:
+      - 70th Anniversary Tributes/Article in Catholic News.md
       - 70th Anniversary Tributes/70th Anniversary Showcase.md
       - 70th Anniversary Tributes/Virtual Gallery.md
       - 70th Anniversary Tributes/Lasallians' Voice.md
