--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title: De La Salle
 url: https://delasalle.edu.sg
 favicon: /images/photo1668084061.jpeg
 colors:
-  primary-color: "#6031b6"
-  secondary-color: "#4372d6"
+  primary-color: "#417505"
+  secondary-color: "#7ed321"
   media-colors:
     - title: media-color-one
       color: "#49759a"
