--- a/_config.yml
+++ b/_config.yml
@@ -10,11 +10,11 @@ colors:
     - title: media-color-two
       color: "#2c4f02"
     - title: media-color-three
-      color: "#00838f"
+      color: "#b8e986"
     - title: media-color-four
-      color: "#00838f"
+      color: "#f5a623"
     - title: media-color-five
-      color: "#00838f"
+      color: "#f8e71c"
 description: An Isomer site of the Singapore Government
 permalink: none
 baseurl: ""
