--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: De La Salle
 url: https://delasalle.edu.sg
 favicon: /images/photo1668084061.jpeg
 colors:
-  primary-color: "#2c4f02"
+  primary-color: "#60a906"
   secondary-color: "#2c4f02"
   media-colors:
     - title: media-color-one
