--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title: De La Salle
 url: https://delasalle.edu.sg
 favicon: /images/photo1668084061.jpeg
 colors:
-  primary-color: "#60a906"
-  secondary-color: "#2c4f02"
+  primary-color: "#2c4f02"
+  secondary-color: "#7ed321"
   media-colors:
     - title: media-color-one
       color: "#2c4f02"
