--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@ url: https://delasalle.edu.sg
 favicon: /images/photo1668084061.jpeg
 colors:
   primary-color: "#2c4f02"
-  secondary-color: "#7ed321"
+  secondary-color: "#2c4f02"
   media-colors:
     - title: media-color-one
-      color: "#2c4f02"
+      color: "#7ed321"
     - title: media-color-two
       color: "#2c4f02"
     - title: media-color-three
