--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ colors:
     - title: media-color-one
       color: "#7ed321"
     - title: media-color-two
-      color: "#2c4f02"
+      color: "#7ed321"
     - title: media-color-three
       color: "#b8e986"
     - title: media-color-four
