--- a/_config.yml
+++ b/_config.yml
@@ -2,19 +2,19 @@ title: De La Salle
 url: https://delasalle.edu.sg
 favicon: /images/photo1668084061.jpeg
 colors:
-  primary-color: "#2c4f02"
-  secondary-color: "#2c4f02"
+  primary-color: "#d0021b"
+  secondary-color: "#f5a623"
   media-colors:
     - title: media-color-one
-      color: "#7ed321"
-    - title: media-color-two
-      color: "#7ed321"
-    - title: media-color-three
-      color: "#b8e986"
-    - title: media-color-four
-      color: "#f5a623"
-    - title: media-color-five
       color: "#f8e71c"
+    - title: media-color-two
+      color: "#8b572a"
+    - title: media-color-three
+      color: "#bd10e0"
+    - title: media-color-four
+      color: "#50e3c2"
+    - title: media-color-five
+      color: "#4a90e2"
 description: An Isomer site of the Singapore Government
 permalink: none
 baseurl: ""
