--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: De La Salle
 url: https://delasalle.edu.sg
 favicon: /images/photo1668084061.jpeg
 colors:
-  primary-color: "#d0021b"
+  primary-color: "#ffffff"
   secondary-color: "#f5a623"
   media-colors:
     - title: media-color-one
