--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title: De La Salle
 url: https://delasalle.edu.sg
 favicon: /images/photo1668084061.jpeg
 colors:
-  primary-color: "#ffffff"
-  secondary-color: "#f5a623"
+  primary-color: "#2c4f02"
+  secondary-color: "#477c01"
   media-colors:
     - title: media-color-one
       color: "#f8e71c"
