--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -98,7 +98,7 @@ links:
         url: /for-parents/booklistnuniform
       - title: Admin Forms
         url: /for-parents/admin-form/
-      - title: Grp Personal Accident Insuranc
+      - title: Personal Accident Insurance
         url: /for-parents/grp-personal-accident-insur/
   - title: For Lasallians
     url: /for-lasallians/student-links/
