--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -56,7 +56,7 @@ links:
         url: /curriculum/pe/
       - title: Aesthetics
         url: /curriculum/aesthetics/
-      - title: Character & Citizenship Edu
+      - title: Character Education
         url: /curriculum/cceducation/
       - title: Social Studies
         url: /curriculum/ss/
