--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: De La Salle
+title: De La Salle School - Singapore
 url: https://delasalle.edu.sg
 favicon: /images/photo1668084061.jpeg
 colors:
