--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: De La Salle School - Singapore
 url: https://delasalle.edu.sg
-favicon: /images/photo1668084061.jpeg
+favicon: /images/4850ed165_31.png
 colors:
   primary-color: "#2c4f02"
   secondary-color: "#477c01"
