--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title: De La Salle School - Singapore
 url: https://delasalle.edu.sg
 favicon: /images/4850ed165_31.png
 colors:
-  primary-color: "#2c4f02"
-  secondary-color: "#477c01"
+  primary-color: "#0f674f"
+  secondary-color: "#0d5944"
   media-colors:
     - title: media-color-one
       color: "#f8e71c"
