--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -71,7 +71,7 @@ links:
       - title: CCA Teachers-In-Charge
         url: /cca/cca-tic/
       - title: CCA Schedule for 2023
-        url: /cca/cca-schedule-2023/
+        url: /cca/cca-schedule-for-2023/
   - title: For Parents
     url: /for-parents/parent-support-group/
     sublinks:
