--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -28,7 +28,7 @@ links:
       - title: School Information
         url: /about-us/sch-info/
       - title: School NON-Financial Info
-        url: Non Financial Info 2021.pdf
+        url: /files/Non Financial Info 2021.pdf
   - title: Our Programmes
     url: /our-programmes/llp/
     sublinks:
