{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"1404"}

--- a/_for-parents/collection.yml
+++ b/_for-parents/collection.yml
@@ -2,6 +2,7 @@ collections:
   for-parents:
     output: true
     order:
+      - WE STories.md
       - Parent Support Group.md
       - Parent Notifications.md
       - Home Based Learning.md
