--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -91,6 +91,8 @@ links:
         url: /for-parents/admin-form/
       - title: Personal Accident Insurance
         url: /for-parents/grp-personal-accident-insur/
+      - title: WE-STories
+        url: /for-parents/westories/
   - title: For Lasallians
     url: /for-lasallians/student-links/
     sublinks:
