--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -28,7 +28,7 @@ links:
       - title: School Information
         url: /about-us/sch-info/
       - title: School Advertisements
-        url: /schAdvert
+        url: /about-us/schooladvert/
       - title: School NON-Financial Info
         url: /files/Non Financial Info 2021.pdf
       - title: Submenu Title
