{"message":"Update file: navigation.yml","fileName":"navigation.yml","userId":"1404"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -31,6 +31,8 @@ links:
         url: /about-us/schooladvert/
       - title: School NON-Financial Info
         url: /files/Non Financial Info 2021.pdf
+      - title: Principal’s Foreword
+        url: /principal's foreword
   - title: Our Programmes
     url: /our-programmes/llp/
     sublinks:
