--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,7 @@ links:
       - title: Our School Rally & Songs
         url: /about-us/rally-songs/
       - title: Principal’s Foreword
-        url: /principals-foreword/
+        url: about-us/principals-foreword/
       - title: Our Staff
         url: /about-us/staff/
       - title: School Council
