{"message":"Update file: navigation.yml","fileName":"navigation.yml","userId":"1404"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -60,7 +60,7 @@ links:
       - title: Social Studies
         url: /curriculum/ss/
       - title: Sexuality Education
-        url: /curriculum/sex-ed/
+        url: /curriculum/sed/
   - title: Co-Curricular Activities (CCA)
     url: /cca/sport-games/hockey/
     sublinks:
