{"message":"Update file: navigation.yml","fileName":"navigation.yml","userId":"1404"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -97,6 +97,8 @@ links:
         url: /for-parents/grp-personal-accident-insur/
       - title: WE-STories
         url: /for-parents/westories/
+      - title: P1 2024
+        url: /for-parents/p1-2024
   - title: For Lasallians
     url: /for-lasallians/student-links/
     sublinks:
