--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: De La Salle School - Singapore
-url: https://delasalle.edu.sg
+url: https://delasalle.moe.edu.sg
 favicon: /images/4850ed165_31.png
 colors:
   primary-color: "#0f674f"
@@ -57,3 +57,4 @@ facebook-pixel: ""
 google_analytics: ""
 linkedin-insights: ""
 resources_name: frontpage
+google_analytics_ga4: ""
