{"message":"Update file: collection.yml","userId":"1404","fileName":"collection.yml"}

--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -21,4 +21,4 @@ collections:
       - Alumni.md
       - Our School Rules.md
       - School Information.md
-      - School Advertisements.md
+      - School Canteen Advertisement.md
