--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-us:
     output: true
     order:
+      - School Advertisements/School Canteen Advertisement.md
       - School Advertisements/School Bus Advertisement.md
       - School Advertisements/.keep
       - Our Founder.md
