{"message":"Update file: collection.yml","userId":"1404","fileName":"collection.yml"}

--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -19,6 +19,6 @@ collections:
       - Alumni.md
       - Our School Rules.md
       - School Advertisements/.keep
-      - School Advertisements/School Canteen Advertisement.md
+      - School Advertisements/School Advertisements.md
       - School Advertisements/School Bus Advertisement.md
       - School Information.md
