{"message":"Update file: navigation.yml","userId":"1404","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -32,7 +32,7 @@ links:
       - title: School Advertisements
         url: /about-us/schooladvert/
       - title: School NON-Financial Info
-        url: /files/Non Financial Info 2021.pdf
+        url: /files/2024/Non Financial Info 2024.pdf
   - title: Our Programmes
     url: /our-programmes/llp/
     sublinks:
