{"message":"Update file: navigation.yml","userId":"1404","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -62,8 +62,10 @@ links:
       - title: Sexuality Education
         url: /curriculum/sed/
   - title: Co-Curricular Activities (CCA)
-    url: /cca/sport-games/hockey/
+    url: /cca/overview/
     sublinks:
+      - title: Overview
+        url: /cca/overview/
       - title: Sports & Games
         url: /cca/sport-games/hockey/
       - title: Performing Arts
